# mingk42-hnh

./: pyproject.toml
public/: index.html
src/hnh/: main.py  predict.py  utils.py
tests/: test_r.py
